Removed initial empty file,tested and built time modification code in suntime_adjust and began preliminary steps for template connections

--- a/Pipfile
+++ b/Pipfile
@@ -9,7 +9,8 @@ django-bootstrap4 = "*"
 django-heroku = "*"
 gunicorn = "*"
 psycopg2-binary = "*"
+python-dateutil = "*"
 
 [dev-packages]
 django-debug-toolbar = "*"
-
+pylint = "*"
