Adds django-environ to Pipfiles

--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ gunicorn = "*"
 psycopg2-binary = "*"
 python-dateutil = "*"
 requests = "*"
+django-environ = "*"
 
 [dev-packages]
 django-debug-toolbar = "*"
