finally got the site back up and running after mark destoyed it lol

--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,9 @@ psycopg2-binary = "*"
 python-dateutil = "*"
 requests = "*"
 django-environ = "*"
+bootstrap4 = "*"
+debug-toolbar = "*"
+django-debug-toolbar = "*"
 
 [dev-packages]
 django-debug-toolbar = "*"
